--- a/client/components/modals/updateUser/updateUser.html
+++ b/client/components/modals/updateUser/updateUser.html
@@ -10,15 +10,10 @@
         </button>
     </div>
     <div class="modal-body">
-        Age: <input [(ngModel)]="user.age">
-        First Name: <input [(ngModel)]="user.name.firstName">
-        Middle Name: <input [(ngModel)]="user.name.middleName">
-        Last Name: <input [(ngModel)]="user.name.lastName">
-        Address Line 1: <input [(ngModel)]="user.address.addressLine1">
-        Address Line 2: <input [(ngModel)]="user.address.addressLine2">
-        City: <input [(ngModel)]="user.address.city">
-        State: <input [(ngModel)]="user.address.state">
-        Zip: <input [(ngModel)]="user.address.zip">
+        First Name: <input [(ngModel)]="user.name.firstName"><br>
+        Last Name: <input [(ngModel)]="user.name.lastName"><br>
+        User Name: <input [(ngModel)]="user.userName"><br>
+        Email Address: <input [(ngModel)]="user.emailAddress"><br>
     </div>
     <button (click)="updateUser()" class="btn btn-primary">Update User</button>
 </ng-template>
