--- a/client/components/modals/updateRecipe/updateRecipe.html
+++ b/client/components/modals/updateRecipe/updateRecipe.html
@@ -17,7 +17,7 @@
         Cook Time: <input [(ngModel)]="recipe.cookTime"><br>
         Directions: <input [(ngModel)]="recipe.directions"><br>
         Ingredients: <input [(ngModel)]="recipe.ingredients"><br>
-        User Reviews: <input [(ngModel)]="recipe.userReviews"><br>
+<!--        User Reviews: <input [(ngModel)]="recipe.userReviews"><br>-->
     </div>
-    <button (click)="updateRecipe()" class="btn btn-primary">Update Recipe</button>
+    <button (click)="updateRecipe()" class="btn btn-secondary">Update Recipe</button>
 </ng-template>
