--- a/client/components/modals/updateReview/updateReview.html
+++ b/client/components/modals/updateReview/updateReview.html
@@ -13,5 +13,5 @@
         Review Description: <input [(ngModel)]="review.reviewDesc"><br>
         Review Rating: <input [(ngModel)]="review.reviewRating"><br>
     </div>
-    <button (click)="updateReview()" class="btn btn-primary">Update Review</button>
+    <button (click)="updateReview()" class="btn btn-secondary">Update Review</button>
 </ng-template>
